<resources>
    <string name="app_name">Bolt Messenger</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats">Chats</string>
    <string name="settings">Settings</string>
    <string name="settings_default_username">Gromov</string>
    <string name="settings_default_status">online</string>
    <string name="settings_account_text_string">Account</string>
    <string name="phoneNumber_settings_resourse">+7 (800) 555-35-35</string>
    <string name="text_settings_phoneDescription">Tap to change phone number</string>
    <string name="text_username">"@"gromov</string>
    <string name="text_settings_usernameDescription">Username</string>
    <string name="settings_bio">Bio</string>
    <string name="text_settings_BioDescription">Add a few words about yourself</string>
    <string name="tollbar_dots_edit">Edit name</string>
    <string name="toolbar_dots_exit">Log out</string>
    <string name="enter_code">Enter code</string>
    <string name="we_sent_code">We sent code</string>
    <string name="code_hint">-  -  -  -  -  -</string>
    <string name="enter_your_phone_hint">Enter your phone here</string>
    <string name="enter_code_logo">enter code logo</string>
    <string name="settings_hint_Input_name">Name</string>
    <string name="settings_input_last_name">Last name</string>
    <string name="name_not_be_empty">Name not be empty</string>
    <string name="data_update">Data is Up To Date</string>
</resources>